src/features/CareViewPatientsSummary/styles/CareViewPatientsSummary.scss
@import "src/styles/styles";
.patient-row-container {
  display: flex;

  .patient-details-container {
    box-sizing: border-box;
    width: 420px;
    position: sticky;
    left: 0;
    line-height: 1.8;
    display: flex;
    border-right: 1px solid #8d8d8d;
    box-shadow: 6px 2px 4px 0 rgba(0, 0, 0, 0.1);
    padding: 8px;

    a {
      color: #0f62fe;
    }

    .care-view-patient-details {
      flex: 1;
    }
    .admission-details {
      display: flex;
      gap: 8px;
      align-items: center;
    }
    .separator {
      padding: 0 8px;
    }
    .bookmark-disabled {
      pointer-events: none;
      opacity: 25%;
    }
    .warning_icon {
      margin-top: 4px;
    }
    .warning-icon-20 {
      fill: #da1e28;
    }

    .result-new-icon-20 {
      fill: #198038;
    }
  }

  .slot-details-header {
    width: 550px;
    padding: 10px 0;
    background-color: #f4f4f4;
    vertical-align: top;
    .time {
      padding-left: 10px;
      font-weight: 500;
    }
  }

  .slot-details-container {
    width: 550px;
    padding-top: 20px;
    padding-bottom: 10px;
    vertical-align: top;

    .medication-task,
    .non-medication-task {
      display: flex;
      border: 2px solid;
      transition: opacity 0.3s ease;
      display: flex;
      padding: 15px 5px;
      margin: 10px;
      margin-top: 0px;
      justify-content: start;

      .logo {
        display: flex;
        align-items: start;
        justify-content: space-evenly;
        padding-left: 5px;
        width: 50px;
      }

      .drug-details-wrapper {
        display: flex;
        flex-direction: column;
        padding-left: 20px;

        .drug-details {
          display: flex;
          margin-top: 5px;
          font-size: 12px;
          font-weight: 400;
          color: #393939;
          .creator-details {
            font-style: italic;
          }
          .drug-detail {
            margin: 2px;
            white-space: break-spaces;
          }
        }
      }
    }

    .medication-task {
      border-color: #92c4c3;
      background: #edf8e6;
    }

    .non-medication-task {
      border-color: #0f62fe;
      background: #e1f3fe;
    }
  }
}

.care-view-patient-table {
  display: grid;
  max-height: 500px;
  overflow: scroll;
  margin-top: 8px;
  border: 1px solid #8d8d8d;

  tbody tr:nth-child(odd) td:first-child {
    background-color: #f4f4f4;
  }

  tbody tr:nth-child(even) td:first-child {
    background-color: white;
  }

  tbody {
    tr {
      border-bottom: 0;

      &:nth-child(odd) {
        background-color: #f4f4f4;
      }

      td {
        border: 0;
        padding: 0;
        border-right: 1px solid #8d8d8d;

        &:last-child {
          border-right: 0;
        }
      }
    }

    tr:first-child {
      td:first-child {
        border-right: 1px solid #8d8d8d;
        box-shadow: 6px 2px 4px 0 rgba(0, 0, 0, 0.1);
      }
    }
  }
}

@media screen and (max-width: $tablet-breakpoint) {
  .patient-row-container .patient-details-container {
    width: 280px;
  }
}

@media screen and (max-width: $mobile-breakpoint) {
  .patient-row-container .patient-details-container {
    width: 180px;
  }
}
.treatments-notification {
  display: flex;
  padding: 10px 10px 10px 20px;
  background-color: #d0e2ff73;
  margin-top: 8px;

  .treatments-notification-span {
    padding: 5px;
    letter-spacing: 0.24px;
  }
}

